--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.12
 
 # Mod Properties
-	mod_version = 1.0.1
+	mod_version = 1.1.2
 	maven_group = xyz.andw
-	archives_base_name = anode
+	archives_base_name = anode_fabric_1_19_3
 
 # Dependencies
 	fabric_version=0.70.0+1.19.3
