--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.3
-	yarn_mappings=1.19.3+build.5
-	loader_version=0.14.12
+	minecraft_version=1.20.2
+	yarn_mappings=1.20.2+build.1
+	loader_version=0.14.23
 
 # Mod Properties
-	mod_version = 1.1.2
+	mod_version = 1.2.0
 	maven_group = xyz.andw
-	archives_base_name = anode_fabric_1_19_3
+	archives_base_name = anode_fabric_1_20
 
 # Dependencies
-	fabric_version=0.70.0+1.19.3
+	fabric_version=0.89.0+1.20.2
